// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowPassword should match snapshot (single field) 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="password"
  >
    Password
  </label>
  <input
    className="usa-input"
    id="password"
    name="password"
    type="password"
  />
  <p
    className="usa-form__note"
  >
    <span
      className="bah-uswds-show-password"
    >
      <button
        aria-controls="password"
        className="usa-show-password"
        data-hide-text="Hide password"
        data-show-text="Show password"
        type="button"
      >
        Show password
      </button>
    </span>
  </p>
</form>
`;

exports[`ShowPassword should match snapshot (two fields) 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="newPass"
  >
    New Password
  </label>
  <input
    className="usa-input"
    id="newPass"
    name="newPass"
    type="password"
  />
  <label
    className="usa-label"
    htmlFor="confirmPass"
  >
    Confirm Password
  </label>
  <input
    className="usa-input"
    id="confirmPass"
    name="confirmPass"
    type="password"
  />
  <p
    className="usa-form__note"
  >
    <span
      className="bah-uswds-show-password"
    >
      <button
        aria-controls="newPass confirmPass"
        className="usa-show-password"
        data-hide-text="Hide my typing"
        data-show-text="Show my typing"
        type="button"
      >
        Show my typing
      </button>
    </span>
  </p>
</form>
`;
